--- a/sub03.html
+++ b/sub03.html
@@ -203,14 +203,17 @@
             </div>
             <div class="sub-weather-tab01 on">
               <div class="weather-date">
-                <h4>기간검색</h4>
+                <!-- <h4>기간검색</h4>
                 <span>
                   <input>
                   <span>-</span>
                   <input>
                 </span>
-                <button>검색</button>
+                <button>검색</button> -->
                 <a href="">엑셀로 관측자료 보기</a>
+
+
+                <p>이 가뭄정보는 20cm깊이의 토양에서 측정한 데이터입니다</p>
               </div>
               <div class="table-outline">
                 <table style="border-top: none;">
@@ -710,7 +713,7 @@
     <!-- E:subContent -->
 
 
-    <article class="modal on">
+    <article class="modal">
 
       <div class="modal-content ">
         <h2>
